feat(#153): fill docs/modules/email.md at parity with storage + analytics
Document the MailerSend module faithfully: what the installer actually
changes (uncomments TODO markers, registers provider, renames disabled
spec), the three built-in flows (confirmation, password reset,
invitation), template + locale layout, test mode, CI secret wiring, and
troubleshooting for unverified domains / fake-key misfires. Link to
updating-projects for three-way merge interaction.